# linkedin-personal-growth-buddy

./: .gitignore  .taskmasterconfig  CHANGELOG.md
linkedin-comment-tracker-extension/: manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
linkedin-comment-tracker-extension/components/ui/: NavbarTab.tsx  Sidebar.tsx  input.tsx  progress.tsx
linkedin-comment-tracker-extension/public/: manifest.json  popup.html
linkedin-comment-tracker-extension/src/: background.js  contentScript.jsx  index.js  popup.jsx
linkedin-comment-tracker-extension/src/lib/: idb.js
scripts/: prd.txt
server/linkedin-comment-tracker-backend/: .gitignore  app.py  hello.py  pyproject.toml  supabase_client.py
server/linkedin-comment-tracker-backend/.chalice/: config.json
