[project]
name = "linkedin-comment-tracker-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.19",
    "chalice>=1.31.4",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.1",
]
